# nextjs-geist-font-project

catkin_ws/: README.md
catkin_ws/src/amcl_localization/: CMakeLists.txt  package.xml
catkin_ws/src/amcl_localization/config/: amcl_params.yaml
catkin_ws/src/amcl_localization/launch/: amcl.launch
catkin_ws/src/amcl_localization/src/: amcl_node.cpp
catkin_ws/src/custom_nodes/: CMakeLists.txt  package.xml
catkin_ws/src/custom_nodes/launch/: robot_nodes.launch
catkin_ws/src/custom_nodes/src/: motor_control.py  sensor_processing.cpp
catkin_ws/src/moveit_integration/: CMakeLists.txt  package.xml
catkin_ws/src/moveit_integration/config/: moveit_config.yaml
catkin_ws/src/moveit_integration/launch/: moveit.launch
catkin_ws/src/path_planning/: CMakeLists.txt  package.xml
catkin_ws/src/path_planning/config/: dwa_params.yaml  global_planner_params.yaml
catkin_ws/src/path_planning/launch/: planner.launch
catkin_ws/src/path_planning/src/: astar_planner.cpp  dwa_planner.cpp
catkin_ws/src/simulation/: package.xml
catkin_ws/src/simulation/launch/: simulation.launch
catkin_ws/src/simulation/worlds/: indoor_world.world
catkin_ws/src/slam_gmapping/: CMakeLists.txt  package.xml
catkin_ws/src/slam_gmapping/config/: gmapping_params.yaml
catkin_ws/src/slam_gmapping/launch/: slam.launch
catkin_ws/src/slam_gmapping/src/: gmapping_node.cpp
