<package format="2">
  <name>amcl_localization</name>
  <version>0.1.0</version>
  <description>ROS package for localization using AMCL.</description>
  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>amcl</depend>
</package>
