<package format="2">
  <name>custom_nodes</name>
  <version>0.1.0</version>
  <description>Custom ROS nodes for sensor processing and motor control.</description>
  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
