<package format="2">
  <name>path_planning</name>
  <version>0.1.0</version>
  <description>ROS package for global (A*) and local (DWA) path planning.</description>
  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
