<package format="2">
  <name>simulation</name>
  <version>0.1.0</version>
  <description>Gazebo simulation package for TurtleBot3 indoor environment.</description>
  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_description</depend>
</package>
