<package format="2">
  <name>slam_gmapping</name>
  <version>0.1.0</version>
  <description>ROS package for Lidar-based SLAM using GMapping.</description>
  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gmapping</depend>
</package>
